--- a/discord-bot/package.json
+++ b/discord-bot/package.json
@@ -1,8 +1,14 @@
 {
   "name": "rarimobot",
   "module": "index.ts",
+  "scripts": {
+    "start": "ts-node index.ts"
+  },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/node": "^20.8.9",
+    "bun-types": "latest",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -10,6 +16,7 @@
   "dependencies": {
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "mongoose": "^7.6.3",
     "winston": "^3.11.0"
   }
 }
