--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,16 +14,20 @@
     "@rainbow-me/rainbowkit": "^1.1.3",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.1",
     "@tabler/icons-react": "^2.40.0",
+    "alchemy-sdk": "^2.10.1",
     "axios": "^1.6.0",
     "connectkit": "^1.5.3",
     "connectkit-next-siwe": "^0.2.0",
     "ethers": "^5",
     "iron-session": "^6.3.1",
+    "lottie-react": "^2.4.0",
+    "mongoose": "^7.6.3",
     "next": "14.0.0",
     "next-auth": "4.22",
     "react": "^18",
     "react-dom": "^18",
     "siwe": "^2",
+    "universal-cookie": "^6.1.1",
     "viem": "^1.17.2",
     "wagmi": "^1.4.5"
   },
